# PixelOverflow

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: debug.hpp  engine.hpp
include/core/: context.hpp  math.hpp  types.hpp
include/memory/: allocator.hpp  resource_manager.hpp
include/render/: framebuffer.hpp  post.hpp  primitive.hpp  raster.hpp  renderer.hpp  tile.hpp
include/scene/: bounding_box.hpp  material.hpp  mesh.hpp  object.hpp  scene.hpp  skeleton.hpp
src/: engine.cpp
src/memory/: allocator.cpp  resource_manager.cpp
src/render/: post.cpp  raster.cpp  renderer.cpp
